# gta-bug

./: CMakeLists.txt  README.md  build.sh
libdiv/: CMakeLists.txt
libdiv/include/div/: div.h
libdiv/src/: div.cpp
libdiv/tests/: CMakeLists.txt  testDiv.cpp
libmul/: CMakeLists.txt
libmul/src/: mul.cpp
libmul/tests/: testMul.cpp
